--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -15,5 +15,23 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Bla" />
+
+    <EditText
+        android:id="@+id/et_car_url"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter URL"
+        android:inputType="text" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        android:id="@+id/bt_save"
+        android:layout_below="@+id/et_car_url"
+        android:layout_alignRight="@+id/et_car_url"
+        android:layout_alignEnd="@+id/et_car_url" />
+
 </RelativeLayout>
